# BPOTF

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  version
reference/DEM/: .finding_results.py  BPOTF2.py  BPOTF3.py  debug.py  dem_devel.py
reference/DEM/results/: bpbpotf10bbcode.txt  bpbpotf12bbcode.txt  bpbpotf18bbcode.txt  bpbpotf6bbcode.txt  bposd10bbcode.txt  bposd12bbcode.txt  bposd18bbcode.txt  bposd6bbcode.txt
reference/DEM/transfermatrices/: BB108TransfDemsObs.mat  BB288CSC.mat
src/: docstrings.h  py11_iface.cpp
src/BPOTF/: OBPOTF.cpp  OBPOTF.h
src/CSC/: OCSC.cpp  OCSC.h  main_test.cpp
src/CSR/: OCSR.cpp  OCSR.h  csr_pytest.py  main_test.cpp
src/DisjointSet/: DisjointSet.cpp
src/ldpc_v2_src/: bp.hpp
